Release notes
version 0.0.1 06-27-16
 - removed p2pAPSSID and p2pAPPassword from bwg.proto model
 - uname command output cached in util class
 - events being sent after successful software upgrade package download and then after restart
 - software upgrade package download and upgrade procedure call executed in separate thread
 - ignoring ssl handshake errors (not checking if certificate is signed, not checking certificate host name) when downloading upgrade package
 - software upgrade feature added
 - temperature sensor data harvesting from gateway wired connection for TS7970 added
 - ac current sensor data harvesting from gateway wired connection for TS7970 added

 0.0.1 07-22-16
 - added fix to manually trigger reset of RX on serial port of TS-7970 only(ttyMAX0) when too much time has elapsed and no rs485 received,
   due to bug on TS-7970 uart interrupt handler getting stuck