@@ -65,4 +65,22 @@ public interface AgentMessageProcessor {
      */
     void setPKI(X509Certificate publicCert, PrivateKey privateKey);
 
+    /**
+     * get the host os
+     * @return
+     */
+    String getOsType();
+
+    /**
+     * get the linux eth device name
+     * @return
+     */
+    String getEthernetDeviceName();
+
+    /**
+     * get the linux wifi device name
+     * @return
+     */
+    String getWifiDeviceName();
+
 }
